--- a/Report.Rmd
+++ b/Report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "DATA_550_midterm"
-author: "Akshay Deverakonda"
+author: "Akshay Deverakonda Chenyang Li"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -9,22 +9,22 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Analysis of average change in ptc_15d per state
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, load-data}
+here::i_am("Report.Rmd")
+data <- readRDS(
+  file = here::here("Output/data_clean.rds")
+)
 ```
 
-## Including Plots
+## Tabular analysis
 
-You can also embed plots, for example:
+A table showing for each state what the average change of the “ptc_15d” variable over the reporting periods included in this document is.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r, table}
+ptc_15d_table <- readRDS(
+  file = here::here("Output/table.rds")
+)
+print(ptc_15d_table)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
